<resources>
    <string name="app_name">Slack Clone Android</string>

    <string name="login">Login</string>

    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>

    <string name="sign_up_question">Don\'t have a account?</string>
    <string name="sign_in_question">Already have an account?</string>

    <string name="dashboard">Dashboard</string>
    <string name="channels">Channels</string>
    <string name="messages">Messages</string>

    <string name="logout">Log out</string>

    <string name="new_channel">New channel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="is_private">Is private?</string>
    <string name="save">Save</string>

    <string name="search">Search</string>
</resources>
